Typo in PromoteLinkForm.

--- a/r2/r2/templates/promotelinkform.html
+++ b/r2/r2/templates/promotelinkform.html
@@ -300,7 +300,7 @@ ${self.javascript_setup()}
             start_title = _("Date when your sponsored link will start running.  We start new campaigns at midnight UTC+5")
             end_title = _("Date when your sponsored link will end (at midnight UTC+5)")
             targeting_title = _("name of the community that you are targeting. A blank entry here means that the ad is untargeted and will run site-wide ")
-            newcamp_title = _("click to create a new campaign.  To edit an existing campaing in the table below, click the 'edit' button.")
+            newcamp_title = _("click to create a new campaign.  To edit an existing campaign in the table below, click the 'edit' button.")
          %>
 
         <table class="preftable">
