--- a/r2/r2/templates/oauth2authorization.html
+++ b/r2/r2/templates/oauth2authorization.html
@@ -23,13 +23,13 @@
 <%!
    import datetime
    from r2.models import OAuth2AccessToken
-   from r2.lib.template_helpers import static, s3_https_if_secure
+   from r2.lib.template_helpers import static, media_https_if_secure
 %>
 <%namespace file="clientinfobar.html" import="app_link" />
 <%namespace file="prefapps.html" import="scope_details" />
 <%
    if thing.client.icon_url:
-     icon = s3_https_if_secure(thing.client.icon_url)
+     icon = media_https_if_secure(thing.client.icon_url)
    else:
      icon = static("defaultapp.png")
    app_name = (
