Add anchor-top-left class for idn-help bubble.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -1046,6 +1046,23 @@ a.author { margin-right: 0.5em; }
         }
     }
 
+    &.anchor-top-left {
+        &:before, &:after {
+            left: 8px;
+            border: 9px solid transparent;
+        }
+
+        &:before {
+            top: -19px;
+            border-bottom-color: gray;
+        }
+
+        &:after {
+            top: -18px;
+            border-bottom-color: white;
+        }
+    }
+
     &.anchor-top-centered {
         &:before, &:after {
             left: 50%;
