--- a/r2/r2/templates/pagenamenav.html
+++ b/r2/r2/templates/pagenamenav.html
@@ -42,7 +42,7 @@
     % if hasattr(c.site, "idn"):
     <span class="help help-hoverable tooltip">
       ${c.site.name}
-      <div id="idn-help" class="hover-bubble help-bubble anchor-top">
+      <div id="idn-help" class="hover-bubble help-bubble anchor-top-left">
         <div class="help-section help-idn">
           <p>
             ${_md("This is an [internationalized domain name](http://en.wikipedia.org/wiki/Internationalized_domain_name).  We've modified how it is displayed [for security reasons](http://en.wikipedia.org/wiki/IDN_homograph_attack).")}
