Add priorities to PromoCampaign.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -4521,6 +4521,7 @@ ul.tabmenu.formtab {
     font-size: small;
     padding: 4px; 
     padding-top: 8px;
+    width: 90px;
 }
 .linefield .campaign input[type=text] { 
     font-size: x-small; 
