Let sponsors safely terminate a live campaign.
This will set the campaign's end_date to now so all traffic and
billing information is retained.

--- a/r2/r2/templates/renderablecampaign.html
+++ b/r2/r2/templates/renderablecampaign.html
@@ -128,6 +128,12 @@
           ${_("view live")}
         </button>
       %endif
+
+      %if thing.is_live and c.user_is_sponsor:
+        <button class="terminate fancybutton" onclick="terminate_campaign(${jquery_row})">
+          ${_("terminate")}
+        </button>
+      %endif
     %endif
   </td>
 </tr>
