gold progress bar: Add fallback color and gradient for Safari.
The progress bar was blank on older iOS and Safari 6. This should
provide a proper gradient for those browsers as well as a flat fallback
color for anything else.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -7403,7 +7403,9 @@ body.gold .buttons li.comment-save-button { display: inline; }
             span {
                 display: block;
                 height: 100%;
-                background: linear-gradient(to bottom, #fff8ba 0%, #eccf90 100%);
+                background-color: #f3e287;
+                background-image: -webkit-linear-gradient(top, #fff8ba, #eccf90);
+                background-image: linear-gradient(to bottom, #fff8ba 0%, #eccf90 100%);
                 border-radius: (@bar-height/2);
             }
         }
