Add backend for new gold feature: "remember my visits".
Store and mark what links users have already read, even between
computers.

--- a/r2/r2/templates/prefoptions.html
+++ b/r2/r2/templates/prefoptions.html
@@ -316,6 +316,9 @@
         ${checkbox(_("show sponsorships"), "show_sponsorships")}
         &#32;<span class="little gray">(${_("the 300x100 'sponsored by...' images that sometimes appear in sidebars")})</span>
         <br/>
+        ${checkbox(_("remember what links I've visited"), "store_visits")}
+        &#32;<span class="little gray">(${_("we'll remember and mark what links you've already read, even between computers")})</span>
+        <br/>
         <br/>
         ${checkbox(_("highlight new comments"), "highlight_new_comments")}
         &#32;<span class="little gray">
