Hide focus outline browser styles on link titles.
Now that link titles have tabindex, several browsers outline them when
focused. Let's override that behavior so that they act the way they did
before the tabindexes.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -938,6 +938,7 @@ a.author { margin-right: 0.5em; }
 
 .thing .title {
     color: blue;
+    outline: none;
     margin-right: .4em;
     padding: 0px;
     overflow: hidden;
