--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -778,6 +778,8 @@ ul.flat-vert {text-align: left;}
 
 a.author { margin-right: 0.5em; }
 
+.thing .parent .author { margin-right: 0.5em; }
+
 .flair, .linkflairlabel {
     display: inline-block;
     margin-right: .5em;
