--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -1237,7 +1237,7 @@ a.author { margin-right: 0.5em; }
     }
 }
 
-body.front-page .organic-listing.loading {
+.organic-listing.show-placeholder.loading {
     display: block;
     height: @min-uncompressed-height;
     &.compressed {
