contact us: Add password/username recovery detail

--- a/r2/r2/templates/contactus.html
+++ b/r2/r2/templates/contactus.html
@@ -66,6 +66,7 @@ from r2.lib.template_helpers import static
         <li>If your submission isn't showing up message the mods by sending a private message to /r/[name of subreddit]</li>
         <li>If you need help on the site or have general site questions, create a text post submission to&#32;<a href="/r/help">/r/help</a>.</li>
         <li>If you got an inappropriate or harrassing PM, click "report" and/or "block user" in the options under the PM.</li>
+        <li>We cannot recover your forgotten password, and we do not change or recycle usernames.</li>
         <li>If you know you need the admins, you can message them&#32;<a href="/message/compose?to=%2Fr%2Freddit.com">here</a>.</li>
       </ul>
     </li>
