--- a/r2/r2/templates/goldvertisement.html
+++ b/r2/r2/templates/goldvertisement.html
@@ -57,7 +57,7 @@
 
       <p class="aside">This daily goal updates every 10 minutes and is reset at
       midnight&#32;<a target="_blank"
-        href="http://en.wikipedia.org/wiki/Mountain_Standard_Time">MST</a>&#32;
+        href="http://en.wikipedia.org/wiki/Pacific_Time_Zone">Pacific Time</a>&#32;
       (${thing.time_left_today} from now).</p>
 
       <div class="history">
