Parameterize SideBox link target attribute.

--- a/r2/r2/templates/sidebox.html
+++ b/r2/r2/templates/sidebox.html
@@ -25,7 +25,8 @@
 <div class="sidebox ${thing.css_class}${' disabled' if thing.disabled else ''}">
   <div class="morelink">
     ${plain_link(thing.title, thing.link, _sr_path=thing.sr_path,
-                 _class='login-required' if thing.show_cover else None, nocname=thing.nocname)}
+                 _class='login-required' if thing.show_cover else None, nocname=thing.nocname,
+                 target=thing.target)}
     <div class="nub"> </div>
   </div>
 
