--- a/r2/r2/templates/profilebar.html
+++ b/r2/r2/templates/profilebar.html
@@ -124,7 +124,7 @@
           <br>
           ${_("of reddit gold remaining")}
         </div>
-        %if getattr(thing, "gold_subscr_id", None):
+        %if getattr(thing, "paypal_subscr_id", None):
           <%  
             paypal_link = ("https://www.paypal.com/cgi-bin/webscr?cmd=_subscr-find&alias=%s" % g.goldthanks_email)
            %>
